--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "babel-preset-rax",
+  "name": "babel-preset-rax-jsx",
   "version": "1.0.0-beta.0",
   "description": "Babel preset for all Rax plugins.",
   "license": "BSD-3-Clause",
