--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
     "@babel/plugin-transform-react-display-name": "^7.10.4",
     "@babel/plugin-transform-react-jsx": "^7.10.4",
     "@babel/plugin-transform-react-jsx-self": "^7.10.4",
-    "@babel/plugin-transform-react-jsx-source": "^7.10.5"
+    "@babel/plugin-transform-react-jsx-source": "^7.10.5",
+    "babel-plugin-transform-jsx-class": "^0.1.3",
+    "babel-plugin-transform-jsx-condition": "^0.1.2",
+    "babel-plugin-transform-jsx-fragment": "^0.1.3",
+    "babel-plugin-transform-jsx-list": "^0.1.2",
+    "babel-plugin-transform-jsx-memo": "^0.1.3",
+    "babel-plugin-transform-jsx-slot": "^0.1.2"
   }
 }
